# collectd_transmission

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  bump_version.patch  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: pylint.yml  python-package.yml  release.yaml
collectd_transmission/: __init__.py
doc/: Makefile  api.rst  compatibility.rst  conf.py  configure.rst  index.rst  install.rst  intro.rst
scripts/: upgrade_from_1_3_to_2_0.sh
tests/: test_collectd_transmission.py  tests.py
utils/: docker-compose.yaml
