[metadata]
name = collectd_transmission
author = Alexandros Kosiaris
author_email = akosiaris@gmail.com
summary = A python plugin for collectd to get stats from a runnning transmission server.
license = 'ISC'
description-file =
	README.rst
home-page = https://github.com/akosiaris/collectd_transmission
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
	Development Status :: 5 - Production/Stable
	Intended Audience :: System Administrators
	License :: OSI Approved :: ISC License (ISCL)
	Natural Language :: English
	Programming Language :: Python
	Operating System :: POSIX
	Topic :: System :: Monitoring
keywords =
	collectd
	transmission
	statistics

[files]
packages =
	collectd_transmission

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[bdist_wheel]
universal = 1
