[metadata]
name = collectd_transmission
version = 3.4
description = A python plugin for collectd to get stats from a runnning transmission server
long_description = file: README.rst
keywords = collectd, transmission, statistics
license = 'ISC'
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Programming Language :: Python :: 3
    Operating System :: POSIX
    Topic :: System :: Monitoring

[options]
packages = collectd_transmission
install_requires =
    transmission-rpc >= 3.0
    importlib-metadata; python_version < "3.10"
include_package_data = True
python_requires = >=3.9
